[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Room.gd" type="Script" id=1]
[ext_resource path="res://Art/A_EmptyRoom.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Building.gd" type="Script" id=3]
[ext_resource path="res://Art/A_BlueRoom.png" type="Texture" id=4]
[ext_resource path="res://Art/A_GreenRoom.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51, 20.9999 )

[node name="Room" type="Area2D"]
position = Vector2( 100, 136 )
scale = Vector2( 1.01961, 1.14286 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.62939e-06, 0 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OutsidePanel" type="Panel" parent="CanvasLayer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.352941 )
margin_right = 640.0
margin_bottom = 360.0

[node name="BuildingPanel" type="Panel" parent="CanvasLayer/OutsidePanel"]
margin_left = 100.0
margin_top = 136.0
margin_right = 539.0
margin_bottom = 304.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/OutsidePanel/BuildingPanel"]
margin_right = 439.0
margin_bottom = 168.0
color = Color( 0.568627, 0.439216, 0.192157, 1 )

[node name="BuildingEmpty" type="Panel" parent="CanvasLayer/OutsidePanel/BuildingPanel"]
margin_left = 44.0
margin_top = 16.0
margin_right = 140.0
margin_bottom = 152.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingEmpty"]
margin_left = 8.0
margin_top = 40.0
margin_right = 110.0
margin_bottom = 82.0
rect_scale = Vector2( 0.782, 0.973 )
texture = ExtResource( 2 )
stretch_mode = 1

[node name="Button" type="Button" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingEmpty"]
margin_left = 8.0
margin_top = 104.0
margin_right = 88.0
margin_bottom = 124.0
text = "Build"

[node name="Label" type="Label" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingEmpty"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 30.0
text = "Empty Room"
align = 1
valign = 1

[node name="BuildingFood" type="Panel" parent="CanvasLayer/OutsidePanel/BuildingPanel"]
margin_left = 172.0
margin_top = 16.0
margin_right = 268.0
margin_bottom = 152.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingFood"]
margin_left = 8.0
margin_top = 40.0
margin_right = 110.0
margin_bottom = 82.0
rect_scale = Vector2( 0.782, 0.973 )
texture = ExtResource( 4 )
stretch_mode = 1

[node name="Button" type="Button" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingFood"]
margin_left = 8.0
margin_top = 104.0
margin_right = 88.0
margin_bottom = 124.0
text = "Build"

[node name="Label" type="Label" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingFood"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 30.0
text = "Blue Room"
align = 1
valign = 1

[node name="BuildingSleep" type="Panel" parent="CanvasLayer/OutsidePanel/BuildingPanel"]
margin_left = 300.0
margin_top = 16.0
margin_right = 396.0
margin_bottom = 152.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingSleep"]
margin_left = 8.0
margin_top = 40.0
margin_right = 110.0
margin_bottom = 82.0
rect_scale = Vector2( 0.782, 0.973 )
texture = ExtResource( 5 )
stretch_mode = 1

[node name="Button" type="Button" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingSleep"]
margin_left = 8.0
margin_top = 104.0
margin_right = 88.0
margin_bottom = 124.0
text = "Build"

[node name="Label" type="Label" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingSleep"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 30.0
text = "Green Room"
align = 1
valign = 1

[connection signal="gui_input" from="CanvasLayer/OutsidePanel" to="." method="_on_OutsidePanel_gui_input"]
[connection signal="build_room" from="CanvasLayer/OutsidePanel/BuildingPanel/BuildingEmpty" to="." method="_on_BuildingEmpty_build_room"]
[connection signal="pressed" from="CanvasLayer/OutsidePanel/BuildingPanel/BuildingEmpty/Button" to="CanvasLayer/OutsidePanel/BuildingPanel/BuildingEmpty" method="_on_Button_pressed"]
[connection signal="build_room" from="CanvasLayer/OutsidePanel/BuildingPanel/BuildingFood" to="." method="_on_BuildingFood_build_room"]
[connection signal="pressed" from="CanvasLayer/OutsidePanel/BuildingPanel/BuildingFood/Button" to="CanvasLayer/OutsidePanel/BuildingPanel/BuildingFood" method="_on_Button_pressed"]
[connection signal="build_room" from="CanvasLayer/OutsidePanel/BuildingPanel/BuildingSleep" to="." method="_on_BuildingSleep_build_room"]
[connection signal="pressed" from="CanvasLayer/OutsidePanel/BuildingPanel/BuildingSleep/Button" to="CanvasLayer/OutsidePanel/BuildingPanel/BuildingSleep" method="_on_Button_pressed"]
